banner img top margin added, might have fixed header overlap?

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -51,6 +51,7 @@ body {
 
 .banner {
     text-align: center;
+    margin-top: 165px;
 }
 #portrait {
     height: 300px;
